# framework

./: .gitignore  Cargo.toml  README.md
crates/android/: Cargo.toml
crates/android/src/: android_jvm.rs  lib.rs  util.rs
crates/android/src/graphics/: android_insets.rs  mod.rs
crates/android/src/view/: android_activity.rs  android_input_device.rs  android_view.rs  android_window.rs  android_window_insets.rs  android_window_insets_controller.rs  mod.rs
crates/android_game_loop/: Cargo.toml
crates/android_game_loop/src/: android_game_loop.rs  android_game_window.rs  android_rumble_pack.rs  event_translation.rs  key_translation.rs  lib.rs  window_handle.rs
crates/cfg_macros/: Cargo.toml
crates/cfg_macros/src/: lib.rs
crates/framework_core/: Cargo.toml
crates/framework_core/src/: lib.rs
crates/framework_core/src/async_task/: mod.rs  native.rs  promise.rs  task.rs  web.rs
crates/framework_core/src/common/: default_resources.rs  game.rs  game_input_manager.rs  game_io.rs  game_overlay.rs  game_service.rs  game_window.rs  mod.rs  next_scene.rs  scene.rs  scene_manager.rs  scene_transition.rs
crates/framework_core/src/graphics/: mod.rs
crates/framework_core/src/graphics/cameras/: mod.rs  ortho_camera.rs
crates/framework_core/src/graphics/copy/: copy_pipeline.rs  mod.rs  texture_source_model.rs
crates/framework_core/src/graphics/flat/: flat_model.rs  flat_pipeline.rs
crates/framework_core/src/graphics/post_processing/: mod.rs  post_pipeline.rs  post_process.rs
crates/framework_core/src/graphics/sprites/: default_resources.rs  sprite.rs  sprite_pipeline.rs  sprite_queue.rs
crates/framework_core/src/graphics/wgpu_abstraction/: binding_resource.rs  buffer_resource.rs  color.rs  graphics_context.rs  instance.rs  mesh.rs  mod.rs  model.rs  render_pass.rs  render_pipeline.rs  render_pipeline_builder.rs  render_queue.rs  render_target.rs  struct_resource.rs  texture.rs  texture_sampler.rs  vertex.rs
crates/framework_core/src/runtime/: game_runtime_core.rs  game_window_config.rs  game_window_event.rs  game_window_lifecycle.rs  game_window_loop.rs  headless_game_loop.rs  headless_game_window.rs  input_event.rs  input_manager.rs  mod.rs
crates/input/: Cargo.toml
crates/input/src/: game_controller.rs  key.rs  lib.rs  mouse.rs  touch.rs
crates/logging/: Cargo.toml
crates/logging/src/: crate_name.rs  default_logger.rs  lib.rs  native_logger.rs  web_logger.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs  rect.rs  time.rs
crates/sdl2_game_loop/: Cargo.toml
crates/sdl2_game_loop/src/: event_translation.rs  key_translation.rs  lib.rs  sdl2_game_loop.rs  sdl2_game_window.rs  sdl2_platform_app.rs  sdl2_rumble_pack.rs
crates/wasm_forward/: Cargo.toml
crates/wasm_forward/src/: lib.rs
crates/winit_game_loop/: Cargo.toml
crates/winit_game_loop/src/: event_translation.rs  key_translation.rs  lib.rs  winit_game_loop.rs  winit_game_window.rs  winit_platform_app.rs
crates/winit_game_loop/src/android/: android_activity.rs  android_activity_window.rs  android_insets.rs  android_insets_controller.rs  android_jvm.rs  android_rumble_pack.rs  android_view.rs  controller_event_pump.rs  mod.rs
crates/winit_game_loop/src/desktop_and_web/: controller_event_pump.rs  default_rumble_pack.rs  mod.rs
crates/winit_game_loop/src/loop_states/: active_state.rs  loop_state.rs  mod.rs  starting_state.rs
examples/multiplatform/: Cargo.toml  compile-and-host-web.sh  compile-and-run-android.sh  index.html
examples/multiplatform/src/: lib.rs  main.rs  main_scene.rs
examples/sprites/: main.rs
examples/transitions/: main.rs  push_transition.rs
examples/triangle/: main.rs  triangle.rs
examples/triangle_headless/: main.rs  triangle.rs
src/: lib.rs  prelude.rs
src/async_task/: mod.rs  sync_result_async_error.rs  task.rs
src/common/: default_resources.rs  game.rs  game_io.rs  game_overlay.rs  game_runtime.rs  game_service.rs  mod.rs  next_scene.rs  ortho_camera.rs  scene.rs  scene_manager.rs  scene_overlay.rs  transition.rs  window_config.rs  window_event.rs
src/graphics/: mod.rs
src/graphics/copy/: copy_pipeline.rs  copy_shader.wgsl  texture_source_model.rs
src/graphics/flat/: flat_model.rs  flat_pipeline.rs  flat_shape_pipeline.rs  mod.rs
src/graphics/post_processing/: mod.rs  post_pipeline.rs  post_process.rs  post_process_model.rs  post_shader.wgsl
src/graphics/sprites/: default_resources.rs  mod.rs  sprite.rs  sprite_pipeline.rs  sprite_queue.rs
src/graphics/wgpu_abstraction/: bind_group_layout_entry.rs  buffer_resource.rs  color_resource.rs  graphics_context.rs  instance.rs  mesh.rs  mod.rs  render_pass.rs  render_pipeline_builder.rs  render_queue.rs  render_target.rs  struct_resource.rs  texture.rs  texture_sampler.rs  vertex.rs
src/input/: controller.rs  events.rs  input_event.rs  input_manager.rs  key.rs  mod.rs  touch.rs
src/logging/: native_logger.rs  web_logger.rs
src/math/: mod.rs  rect.rs
src/sdl/: event_translation.rs  key_translation.rs  mod.rs  platform_app.rs  window.rs  window_loop.rs
src/winit/: event_translation.rs  key_translation.rs  mod.rs  platform_app.rs  window.rs
src/winit/android/: android_activity.rs  android_activity_window.rs  android_jvm.rs  controller_event_pump.rs  mod.rs
src/winit/desktop_and_web/: controller_event_pump.rs  rumble_pack.rs
src/winit/window_loop/: active_handler.rs  mod.rs  starting_handler.rs  winit_event_handler.rs  winit_window_loop.rs
