[package]
name = "framework"
version = "0.1.0"
edition = "2021"
license = "Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = { version = "0.4", features = ["std"] }
# using webgl feature until wgpu is standardized and implemented in browsers
wgpu = { version = "0.17", features = ["webgl"] }
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck"] }
image = "0.24"
raw-window-handle = "0.5"
anyhow = "1"
instant = "0.1"
async-executor = "1"
async-task = "4"
pollster = "0.3"
strum = { version = "0.25", features = ["derive"] }
termcolor = "1"
copypasta = "0.8"
futures-lite = "1"
slotmap = "1"
backtrace = "0.3.68"

[features]
default = ["winit"]
sdl = ["dep:sdl2"]
winit = ["dep:winit", "dep:gilrs"]

# native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = { version = "0.10", optional = true }
async-io = { version = "1.7" }

# desktop
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
winit = { version = "0.28", optional = true }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", features = [
  "raw-window-handle",
  "bundled",
], optional = true }

# android
[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.28", optional = true, features = [
  "android-native-activity",
] }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", features = [
  "raw-window-handle",
  "bundled",
  "static-link",
], optional = true }
ndk-sys = "0.4"

# web dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = "0.28"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gilrs = "0.10"

# dependencies for examples
[dev-dependencies]
pollster = "0.3"
rand = "0.8"
simple-easing = "1.0"
