[package]
name = "framework"
version = "0.1.0"
edition = "2021"
license = "Zlib"

[workspace]
members = [
  "crates/android",
  "crates/android_game_loop",
  "crates/cfg_macros",
  "crates/framework_core",
  "crates/input",
  "crates/logging",
  "crates/math",
  "crates/sdl2_game_loop",
  "crates/wasm_forward",
  "crates/winit_game_loop",
  "examples/multiplatform"
]

[workspace.dependencies]
log = { version = "0.4", features = ["std"] }
android-activity = "0.6"
ndk = "0.9"
ndk-sys = "0.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cfg_macros = { path = "crates/cfg_macros" }
framework_core = { path = "crates/framework_core" }
input = { path = "crates/input" }
logging = { path = "crates/logging" }
math = { path = "crates/math" }
winit_game_loop = { path = "crates/winit_game_loop", optional = true }
sdl2_game_loop = { path = "crates/sdl2_game_loop", optional = true }
android_game_loop = { path = "crates/android_game_loop", optional = true }

# web dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_forward = { path = "crates/wasm_forward" }

[features]
default = ["winit", "default_image_formats"]
default_image_formats = ["framework_core/default_image_formats"]
all_image_formats = ["framework_core/all_image_formats"]
sdl2 = ["dep:sdl2_game_loop"]
winit = ["dep:winit_game_loop"]
android = ["dep:android_game_loop"]

# dependencies for examples
[dev-dependencies]
rand = "0.8"
simple-easing = "1.0"
anyhow = "1"
bytemuck = "1"
