[package]
name = "android_game_loop"
version = "0.1.0"
edition = "2021"
license = "Zlib"

[dependencies]
android = { path = "../android" }
input = { path = "../input" }
math = { path = "../math" }
framework_core = { path = "../framework_core" }
android-activity = { workspace = true, features = ["native-activity"] }
ndk = { workspace = true, features = ["rwh_06"] }
log = { workspace = true }
anyhow = "1"
