[package]
name = "framework_core"
version = "0.1.0"
edition = "2021"
license = "Zlib"

[dependencies]
cfg_macros = { path = "../cfg_macros" }
math = { path = "../math" }
input = { path = "../input" }
logging = { path = "../logging" }
async-executor = "1"
async-task = "4.0.0"
futures-lite = "1"
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
copypasta = "0.10"
image = { version = "0.24", default-features = false }
raw-window-handle = "0.5"
# using webgl feature until wgpu is standardized and implemented in browsers
wgpu = { version = "0.17", features = ["webgl"] }
slotmap = "1"

# native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-io = { version = "2" }

# web dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_forward = { path = "../wasm_forward" }

[features]
default_image_formats = ["image/png"]
all_image_formats = [
  "default_image_formats",
  "image/gif",
  "image/jpeg",
  "image/ico",
  "image/pnm",
  "image/tga",
  "image/tiff",
  "image/webp",
  "image/bmp",
  "image/hdr",
  "image/dxt",
  "image/dds",
  "image/farbfeld",
  "image/jpeg_rayon",
  "image/openexr",
  "image/qoi"
]
