[package]
name = "logging"
version = "0.1.0"
edition = "2021"
license = "Zlib"

[dependencies]
cfg_macros = { path = "../cfg_macros" }
log = { version = "0.4", features = ["std"] }

# native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
backtrace = "0.3"

# desktop dependencies
[target.'cfg(not(any(target_os = "android", target_arch = "wasm32")))'.dependencies]
termcolor = "1"

# android dependencies
[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.5"

# web dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm_forward = { path = "../wasm_forward" }
