[package]
name = "sdl2_game_loop"
version = "0.1.0"
edition = "2021"
license = "Zlib"

[dependencies]
input = { path = "../input" }
math = { path = "../math" }
framework_core = { path = "../framework_core" }
anyhow = "1"

# desktop
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", features = [
  "raw-window-handle",
  "bundled",
] }

# android
[target.'cfg(target_os = "android")'.dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", features = [
  "raw-window-handle",
  "bundled",
  "static-link",
] }
