[package]
name = "wasm_forward"
version = "0.1.0"
edition = "2021"
license = "Zlib"

[dependencies]
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
