[package]
name = "multiplatform"
version = "0.1.0"
edition = "2021"

[dependencies]
framework = { path = "../.." }
anyhow = "1"
rand = "0.8"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# necessary for android + wasm builds
[lib]
crate-type = ["cdylib", "rlib"]
